v0.4.x/_sources/reference/fury.data.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`data`
===========
.. automodule:: fury.data

.. currentmodule:: fury.data
.. autosummary::

   dirname
   fetch_viz_icons
   pjoin
   read_viz_icons

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`data.fetcher`
---------------------------
.. automodule:: fury.data.fetcher

.. currentmodule:: fury.data.fetcher
.. autosummary::

   check_md5
   copyfileobj
   copyfileobj_withprogress
   fetch_data
   fetch_viz_icons
   md5
   pjoin
   read_viz_icons
   update_progressbar


.. currentmodule:: fury.data

dirname
~~~~~~~

.. autofunction:: dirname

fetch_viz_icons
~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_icons

pjoin
~~~~~

.. autofunction:: pjoin

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons


.. currentmodule:: fury.data.fetcher

check_md5
~~~~~~~~~

.. autofunction:: check_md5

copyfileobj
~~~~~~~~~~~

.. autofunction:: copyfileobj

copyfileobj_withprogress
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: copyfileobj_withprogress

fetch_data
~~~~~~~~~~

.. autofunction:: fetch_data

fetch_viz_icons
~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_icons

md5
~~~

.. autofunction:: md5

pjoin
~~~~~

.. autofunction:: pjoin

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons

update_progressbar
~~~~~~~~~~~~~~~~~~

.. autofunction:: update_progressbar

